--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.1
 	adafruit/Adafruit Unified Sensor@^1.1.4
+	adafruit/Adafruit CCS811 Library@^1.0.4
